Fixed table overflows

--- a/src/ui/Table/style.scss
+++ b/src/ui/Table/style.scss
@@ -5,7 +5,7 @@
 .vtfk-table-container {
   width: 100%;
   height: 100%;
-  overflow: none;
+  overflow: auto;
 
   & table {
     width: 100%;
